--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <div class="col-1"></div>
                 <a href="{% url 'support' %}" class="col-2 button">Стать спонсором</a>
                 <div class="col-6"></div>
-                <a href="#" class="col-2 button"  data-bs-toggle="modal" data-bs-target="#registry_form">Регистрация/Вход<br>для приютов</a>
+                <a href="#" class="col-2 button"  data-bs-toggle="modal" data-bs-target="#registry_form">Регистрация<br>вход для приютов</a>
             </div>
         </section>
         <section class="container-fluid menu_links">
@@ -46,7 +46,7 @@
                     <a class="nav-link" aria-current="page" href="{% url 'volunteers' %}">Информация партнерам и волонтерам</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'shelters' %}">Приюты и их ности</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'shelters' %}">Приюты и их новости</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'archive' %}">Архив</a>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" id="login_button">Уже есть аккаунт</button>
-                            <button type="submit" class="btn btn-primary" id="registry" data-dismiss="alert">Зарегистрироваться</button>
+                            <button type="submit" class="btn btn-primary" data-dismiss="alert">Зарегистрироваться</button>
                         </div>    
                     </form>
                 </div>
