--- a/templates/login.html
+++ b/templates/login.html
@@ -127,7 +127,7 @@
 <div id="FORM_form_create_card_shelter" style="display: none">{{form_create_card_shelter}}</div>
 <div id="FORM_form_create_news_shelter" style="display: none">{{form_create_news_shelter}}</div>
 <div id="FORM_form_create_card_animal" style="display: none">{{form_create_card_animal}}</div>
-<!-- <div id="FORM_form_change_card_animal" style="display: none">{{form_change_card_animal}}</div> -->
+<div id="FORM_form_change_card_animal" style="display: none">{{form_change_card_animal}}</div>
 <div id="FORM_form_change_card_shelter" style="display: none">{{form_change_card_shelter}}</div>
 <div id="FORM_form_budget_month" style="display: none">{{form_budget_month}}</div>
 <div id="FORM_form_new_shelter_report" style="display: none">{{form_new_shelter_report}}</div>
