--- a/templates/login.html
+++ b/templates/login.html
@@ -27,8 +27,7 @@
                 <span class="want-take-animal">❗<span>Хотят забрать</span></span>
               {% endif %}
               <a href="/help/{{name.id}}" target="_blank">{{name}} </a>
-              <a style="margin-left: 5px; color: red" onclick="load({{name.id}}, 'sofronov_s@ru.itstep.org&admin')" href="#" data-bs-target="#ChangeCardAnimal" id="form_change_card_animal" data-bs-toggle="modal">Редактировать</a>
-              <a style="margin-left: 5px; color: green" onclick="load({{name.id}}, 'sofronov_s@ru.itstep.org&admin')" href="#" data-bs-target="#ChangeCardAnimal" id="form_change_card_animal" data-bs-toggle="modal">Отчет</a>
+              <a style="margin-left: 5px; color: red" onclick="load({{name.id}}, 'sofronov_s@ru.itstep.org&admin')" class="form_change_card_animal" id="animal_card_{{name.id}}">Редактировать</a>
           </div>
         {% endfor %}
       </div>
